# bengal-wallpaper-kde

./: CMakeLists.txt
Boat/: metadata.desktop
Jungle/: metadata.desktop
LandlordsPalace/: metadata.desktop
Nature/: metadata.desktop
OldTree/: metadata.desktop
River/: metadata.desktop
SajekHills/: metadata.desktop
SeaBeach/: metadata.desktop
Sunset/: metadata.desktop
