project(wallpapers)
set(PROJECT_VERSION "5.23.4")
set(PROJECT_VERSION_MAJOR 5)
cmake_minimum_required(VERSION 3.16)

include(WriteBasicConfigVersionFile)
include(FeatureSummary)

find_package(ECM 0.0.9 REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} )

include(KDEInstallDirs)
include(KDECMakeSettings)
include(KDECompilerSettings)
include(GenerateExportHeader)

install(DIRECTORY SajekHills DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY CloudySky DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Jungle DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY LandlordsPalace DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY SeaBeach DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY OldTree DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Boat DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY River DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Nature DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Sunset DESTINATION ${KDE_INSTALL_WALLPAPERDIR})